--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sea-koa-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "快速生成 koa 应用",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "sea-koa": "./bin/sea-koa.js"
   },
   "author": "sea",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/xinghaiyang1994/sea-koa-cli/issues"
   },
